	PR c++/17393 	* decl.c (grokdeclarator): Robustify error-recovery on invalid 	declarations.

PR c++/17393
	* g++.dg/parse/error21.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@88855 138bc75d-0d04-0410-961f-82ee72b054a4